@@ -9,7 +9,7 @@ plugins {
     id 'com.stehno.natives' version '0.3.1'
     id 'org.sonarqube' version '3.1.1'
     id 'jacoco'
-    id("net.ltgt.errorprone") version "2.0.1"
+    id("net.ltgt.errorprone") version "4.1.0"
 }
 
 repositories {
@@ -62,11 +62,11 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.4.0'
     testImplementation 'org.mockito:mockito-inline:3.4.0'
 
-    annotationProcessor "com.uber.nullaway:nullaway:0.10.15"
+    annotationProcessor "com.uber.nullaway:nullaway:0.12.1"
     annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.15"
 
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
-    errorprone "com.google.errorprone:error_prone_core:2.3.2"
+    errorprone "com.google.errorprone:error_prone_core:2.35.1"
     errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
     compileOnly "com.uber.nullaway:nullaway-annotations:0.10.20"
 
@@ -101,19 +101,6 @@ test {
 	testLogging {
     events "passed", "skipped", "failed"
     exceptionFormat "full" }
-}
-
-jacocoTestReport {
-    sourceSets(sourceSets.main)
-    getSourceDirectories().setFrom(sourceSets.main.allSource.srcDirs)
-    getClassDirectories().setFrom(sourceSets.main.output)
-
-    reports {
-        xml.enabled true
-        html.enabled true
-        xml.destination file("${buildDir}/jacoco/report.xml")
-        html.destination file("${buildDir}/jacoco/html")
-    }
 }
 
 jar {
@@ -173,3 +160,22 @@ includeNatives.dependsOn copyLicense
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+
+// These --add-exports arguments are required when targeting JDK 11+ since Error Prone and NullAway access a bunch of
+// JDK-internal APIs that are not exposed otherwise.
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED",
+    ]
+}
+
